# centrifuge

./: .gitignore  README.md  pyproject.toml
.claude/agents/: serum-preset-builder.md  sound-design-expert.md
centrifuge/: _paths.py  audio.py  cli.py  codec.py  preset.py  progress.py
centrifuge/agents/: noapi.py  orchestrator.py  serum_expert.py  sound_design.py
centrifuge/local/: orchestrator.py  serum_expert.py  sound_design.py  templates.py  vocabulary.py
tests/: test_codec.py  test_local_e2e.py  test_local_serum_expert.py  test_local_sound_design.py  test_noapi.py  test_preset.py  test_progress.py
